--- a/src/app/pages/directory/empanalytics/empanalytics.html
+++ b/src/app/pages/directory/empanalytics/empanalytics.html
@@ -96,37 +96,135 @@
 <div class="col-lg-12 clear-side-padding">
     <div class=" col-md-4">
         <div class="panel">
-            <div class="panel-body">
-                <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
+            <div class="panel-body" style="height:250px">
+                <div class="col-lg-12 block-heading">
                     <h5>HEADCOUNT BY JOB TITLE</h5>
-
-
-                    <donut-Piechart></donut-Piechart>
-
+                </div>
+                <div class="col-lg-12">
+                    <div class="clear-side-padding col-lg-6 col-lg-6 col-lg-6 col-lg-6 ">
+                        <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels">
+                        </canvas>
+                    </div>
+                    <div class="col-lg-6 col-lg-6 col-lg-6 clear-side-padding  chart-legend">
+                        <!-- ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(144, 204, 109);"></span>Editor
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(227, 216, 80);"></span>Executive Secretary
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(255, 178, 114);"></span>Senior Sales Associate
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(255, 124, 124);"></span>Programmer Analyst III
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(200, 136, 253);"></span>Clinical Specialist
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(46, 176, 89);"></span>Junior Executive
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(85, 85, 85);"></span>Account Coordinator
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(72, 61, 139);"></span>Media Manager II
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(47, 79, 79);"></span>Biostatistician I
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(79, 79, 47);"></span>Legal Assistant
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(0, 139, 139);"></span>Social Worker
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(88, 14, 218);"></span>Systems Administrator IV
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(16, 209, 202);"></span>Professor
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(153, 103, 39);"></span>Software Engineer III
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(26, 150, 237);"></span>Engineer III
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(194, 68, 156);"></span>Nuclear Power Engineer
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(20, 18, 217);"></span>Health Coach III
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(254, 55, 120);"></span>Media Manager I
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(30, 102, 157);"></span>Financial Analyst
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(75, 213, 119);"></span>Dental Hygienist
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(138, 65, 198);"></span>Graphic Designer
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(124, 19, 123);"></span>Electrical Engineer
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                        <p class="legend-item ng-binding ng-scope">
+                            <span data-ng-style="{backgroundColor: type.color}" style="background-color: rgb(42, 15, 249);"></span>Structural Engineer
+                        </p>
+                        <!-- end ngRepeat: type in vm.employeesSummary.jobTitleEmployees -->
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class=" col-md-4">
-        <div class="panel">
-            <div class="panel-body">
-                <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
-                    <h5>YEARS IN ORGANIZATION</h5>
-                    <donut-Piechart></donut-Piechart>
-                </div>
+</div>
+<div class=" col-md-4">
+    <div class="panel">
+        <div class="panel-body">
+            <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
+                <h5>YEARS IN ORGANIZATION</h5>
+                <donut-Piechart></donut-Piechart>
             </div>
         </div>
     </div>
-    <div class=" col-md-4">
-        <div class="panel">
-            <div class="panel-body">
-                <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
-                    <h5>HEADCOUNT BY DEPARTMENT</h5>
-                    <donut-Piechart></donut-Piechart>
-                </div>
+</div>
+<div class=" col-md-4">
+    <div class="panel">
+        <div class="panel-body">
+            <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
+                <h5>HEADCOUNT BY DEPARTMENT</h5>
+                <donut-Piechart></donut-Piechart>
             </div>
         </div>
     </div>
+</div>
 </div>
 <div class="col-lg-12 clear-side-padding">
     <div class=" col-md-4">
