--- a/src/app/pages/directory/empanalytics/empanalytics.html
+++ b/src/app/pages/directory/empanalytics/empanalytics.html
@@ -100,7 +100,7 @@
                 <div class="col-lg-12 block-heading">
                     <h5>HEADCOUNT BY JOB TITLE</h5>
                 </div>
-                <div class="col-lg-12">
+                <div class="col-lg-12 piechart-top">
                     <div class="clear-side-padding col-lg-6 col-lg-6 col-lg-6 col-lg-6 ">
                         <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels">
                         </canvas>
@@ -204,27 +204,27 @@
             </div>
         </div>
     </div>
-</div>
-<div class=" col-md-4">
-    <div class="panel">
-        <div class="panel-body">
-            <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
-                <h5>YEARS IN ORGANIZATION</h5>
-                <donut-Piechart></donut-Piechart>
+
+    <div class=" col-md-4">
+        <div class="panel">
+            <div class="panel-body">
+                <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
+                    <h5>YEARS IN ORGANIZATION</h5>
+
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class=" col-md-4">
-    <div class="panel">
-        <div class="panel-body">
-            <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
-                <h5>HEADCOUNT BY DEPARTMENT</h5>
-                <donut-Piechart></donut-Piechart>
+    <div class=" col-md-4">
+        <div class="panel">
+            <div class="panel-body">
+                <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
+                    <h5>HEADCOUNT BY DEPARTMENT</h5>
+
+                </div>
             </div>
         </div>
     </div>
-</div>
 </div>
 <div class="col-lg-12 clear-side-padding">
     <div class=" col-md-4">
@@ -232,7 +232,7 @@
             <div class="panel-body">
                 <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
                     <h5>HEADCOUNT BY LOCATION </h5>
-                    <donut-Piechart></donut-Piechart>
+
                 </div>
             </div>
         </div>
@@ -242,7 +242,7 @@
             <div class="panel-body">
                 <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
                     <h5>HEADCOUNT BY ATTENDANCE SHIFT</h5>
-                    <donut-Piechart></donut-Piechart>
+
                 </div>
             </div>
         </div>
@@ -252,7 +252,7 @@
             <div class="panel-body">
                 <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
                     <h5>HEADCOUNT BY GENDER</h5>
-                    <donut-Piechart></donut-Piechart>
+
                 </div>
             </div>
         </div>
@@ -264,7 +264,7 @@
             <div class="panel-body">
                 <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
                     <h5>AGE IN YEARS</h5>
-                    <donut-Piechart></donut-Piechart>
+
                 </div>
             </div>
         </div>
@@ -274,7 +274,7 @@
             <div class="panel-body">
                 <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
                     <h5>HEADCOUNT BY TIME TYPE</h5>
-                    <donut-Piechart></donut-Piechart>
+
                 </div>
             </div>
         </div>
@@ -284,7 +284,7 @@
             <div class="panel-body">
                 <div class="col-lg-12 col-md-12 col-sm-12 block-heading">
                     <h5>HEADCOUNT BY WORKER TYPE</h5>
-                    <donut-Piechart></donut-Piechart>
+
                 </div>
             </div>
         </div>
