--- a/src/app/pages/configuration/company/legal/edit-signatory.html
+++ b/src/app/pages/configuration/company/legal/edit-signatory.html
@@ -39,52 +39,99 @@
                                         data-form-submit="addSignatoryForm.$submitted"></span>
                                 </div>
                             </div>
+                        </div>
 
-                            <div class="row">
-                                <div class="col-sm-7">
-                                    <div class="form-group clear-bottom">
-                                        <label>Address</label>
-                                        <input type="text" class="form-control" data-ng-model="entity.ASDStreet" />
-                                        <input type="text" class="form-control vertical-margin" />
-                                    </div>
-                                </div>
-                                <div class="col-sm-7 form-group">
-                                    <div class="col-sm-4 clear-left-padding">
-                                        <input type="text" class="form-control" placeholder="City" data-ng-model="entity.ASDCityId" />
-                                    </div>
-                                    <div class="col-sm-4 clear-side-padding">
-                                        <input type="text" class="form-control" placeholder="State" />
-                                    </div>
-                                    <div class="col-sm-4 clear-right-padding">
-                                        <input type="text" class="form-control" placeholder="Pincode" data-ng-model="entity.ASDPinCode" />
-                                    </div>
+                        <div class="col-sm-12 new-person-details" data-ng-class="{'clear-top' : 'edit'}">
+                            <div class="col-sm-4 clear-left-padding">
+                                <div class="form-group">
+                                    <label>Email</label>
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatureName" name="signatoryName" id="signatoryName" required
+                                    />
+                                    <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryName" data-required-error="Name is required"
+                                        data-form-submit="addSignatoryForm.$submitted"></span>
                                 </div>
                             </div>
+                            <div class="col-sm-4 clear-side-padding">
+                                <div class="form-group">
+                                    <label>Pan Card</label>
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatoryFathersName" name="signatoryFather" id="signatoryFather"
+                                        required />
+                                    <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryFather" data-required-error="Father name is required"
+                                        data-form-submit="addSignatoryForm.$submitted"></span>
+                                </div>
+                            </div>
+                            
+                        </div>
 
-                            <div class="row">
-                                <div class="col-sm-9">
-                                    <div class="col-sm-7 clear-side-padding">
-                                        <div class="form-group clear-bottom">
-                                            <label>Email</label>
-                                            <input class="form-control" data-ng-model="model.email" name="signatoryEmail" id="signatoryEmail" required data-ng-model-options="modelOptions"
-                                                data-ng-pattern="/^([\w-]+(?:\.[\w-]+)*)@((?:[\w-]+\.)*\w[\w-]{0,66})\.([a-z]{2,20}(?:\.[a-z]{2})?)$/"
-                                            />
-                                            <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryEmail" data-required-error="Email is required"
-                                                data-form-submit="addSignatoryForm.$submitted" data-pattern-error="Email is not Valid"></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-5 clear-right-padding">
-                                        <div class="form-group clear-bottom">
-                                            <label>PAN Card Number</label>
-                                            <input type="text" class="form-control upper-case" data-ng-model="model.panNumber" name="signatoryPan" id="signatoryPan"
-                                                required />
-                                            <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryPan" data-required-error="Pan is required"
-                                                data-form-submit="addSignatoryForm.$submitted"></span>
-                                        </div>
-                                    </div>
+                        <div class="col-sm-12 new-person-details" data-ng-class="{'clear-top' : 'edit'}">
+                            <div class="col-sm-4 clear-left-padding">
+                                <div class="form-group">
+                                    <label>Flat/Door/Block No</label>
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatureName" name="signatoryName" id="signatoryName" required
+                                    />
+                                    <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryName" data-required-error="Name is required"
+                                        data-form-submit="addSignatoryForm.$submitted"></span>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 clear-side-padding">
+                                <div class="form-group">
+                                    <label>Street/Lane (Optional)</label>
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatoryFathersName" name="signatoryFather" id="signatoryFather"
+                                        required />
+                                    <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryFather" data-required-error="Father name is required"
+                                        data-form-submit="addSignatoryForm.$submitted"></span>
+                                </div>
+                            </div>
+                            <div class="col-sm-4 clear-right-padding">
+                                <div class="form-group">
+                                    <label>Area/Locality (Optional)</label>
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDDesgId" name="signatoryDesignation" id="signatoryDesignation"
+                                        required />
+                                    <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryDesignation" data-required-error="Designation is required"
+                                        data-form-submit="addSignatoryForm.$submitted"></span>
                                 </div>
                             </div>
                         </div>
+
+                        <div class="col-sm-12 new-person-details" data-ng-class="{'clear-top' : 'edit'}">
+                            <div class="col-sm-3 clear-left-padding">
+                                <div class="form-group">
+                                    <label>Pin code</label>
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatureName" name="signatoryName" id="signatoryName" required
+                                    />
+                                    <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryName" data-required-error="Name is required"
+                                        data-form-submit="addSignatoryForm.$submitted"></span>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 clear-side-padding">
+                                <div class="form-group">
+                                    <label>Country</label>
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDSignatoryFathersName" name="signatoryFather" id="signatoryFather"
+                                        required />
+                                    <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryFather" data-required-error="Father name is required"
+                                        data-form-submit="addSignatoryForm.$submitted"></span>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 clear-right-padding">
+                                <div class="form-group">
+                                    <label>State</label>
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDDesgId" name="signatoryDesignation" id="signatoryDesignation"
+                                        required />
+                                    <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryDesignation" data-required-error="Designation is required"
+                                        data-form-submit="addSignatoryForm.$submitted"></span>
+                                </div>
+                            </div>
+                            <div class="col-sm-3 clear-right-padding">
+                                <div class="form-group">
+                                    <label>City</label>
+                                    <input type="text" class="form-control" data-ng-model="entity.ASDDesgId" name="signatoryDesignation" id="signatoryDesignation"
+                                        required />
+                                    <span class="validation-msg" data-validation-messages="" data-model-controller="addSignatoryForm.signatoryDesignation" data-required-error="Designation is required"
+                                        data-form-submit="addSignatoryForm.$submitted"></span>
+                                </div>
+                            </div>
+                        </div>
+
                     </fieldset>
                 </div>
                 <div class="row">
