--- a/src/sass/theme/_djMain.scss
+++ b/src/sass/theme/_djMain.scss
@@ -382,6 +382,8 @@ input:focus, select:foucs {
   overflow: auto;
 }
 
+
+
 .modal .modal-dialog.modal-top-center-800{
   width: 875px;
   height: 565px;
@@ -397,6 +399,20 @@ input:focus, select:foucs {
   top: 65px;
   left: 450px;
   overflow: scroll;
+}
+.modal .modal-dialog.modal-fullscreen{
+
+  position: fixed;
+  left: 0px;
+  overflow: auto;
+  overflow-x:hidden;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
+.modal-content {
+  height: 100%;
+  border-radius: 0;
 }
 .overflow-visible,
 .overflow-visible .ui-grid-cell-contents {
