--- a/src/sass/theme/_empMain.scss
+++ b/src/sass/theme/_empMain.scss
@@ -819,10 +819,10 @@ textarea.form-control {
   height: 23px;
 }
 .payroll-summary .payroll-nav-bar .payroll-month-nav .month-tab.completed {
-  background-color:#90EE90;
+  background-color:#56b356;
 }
 .payroll-summary .payroll-nav-bar .payroll-month-nav .month-tab-cell.active .completed .month-status:before {
-  background-color:#90EE90;
+  background-color:#56b356;
 }
 .payroll-summary .payroll-nav-bar .payroll-month-nav .month-tab.pending {
   background-color: #f9af2e;
@@ -1010,3 +1010,137 @@ textarea.form-control {
   font-size: .8vw;
 }
 
+
+// admin payroll
+
+.payrolladmin.tile-content {
+  padding-top: 10px;
+  color: #333;
+  max-height: none;
+}
+.payrolladmin .inner-heading {
+  color: #888;
+  font-size: 13px;
+}
+.upper-case {
+  text-transform: uppercase;
+}
+ .text-moderate-bold {
+  font-weight: 500;
+}
+.text-muted {
+  color: #777;
+}
+.payrolladmin ul {
+  margin-top: 0;
+  margin-bottom: 9.5px;
+}
+.payrolladmin .content-options li{
+  list-style: none;
+}
+.payrolladmin .content-options li a {
+  color: #50a5e9;
+  margin: 5px 0 5px 20px;
+  display: inline-block;
+}
+.payrolladmin .tile-content .content-bullet {
+  position: relative;
+}
+.payrolladmin .tile-content .content-bullet:before {
+  content: '';
+  position: absolute;
+  left: -20px;
+  border: 4px solid #d8d8d9;
+  top: 6px;
+  border-radius: 50%;
+}
+.report-info-list {
+  padding: 0;
+  margin-top: 15px;
+  margin-left: 20px;
+}
+ .report-info-list li {
+  margin-bottom: 10px;
+  position: relative;
+  list-style-type: decimal;
+  color: #409ce7;
+}
+
+//perks
+
+.header-icon {
+  color: #409ce7;
+  font-size: 21px;
+  margin-right: 10px;
+}
+.add-new {
+  margin: 25px 0 20px 0;
+}
+.add-new a {
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  font-size: 14px;
+  padding: 7px 14px 7px 14px;
+}
+.add-new a:hover {
+  background-color: #429dee;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+  margin: 1px;
+}
+.grayout {
+  color: #a9a9a9;
+  cursor: default!important;
+}
+
+.title-bar {
+  padding: 6px 0;
+  margin: 0;
+}
+.title-bar span {
+  margin-top: -23px;
+}
+
+.wizard-step-container {
+  width: 1100px;
+  margin: 30px auto 0 auto;
+}
+
+.content-container {
+  background-color: #fff;
+  border-radius: 4px;
+  padding-bottom: 20px;
+}
+.config-field {
+  margin-bottom: 15px;
+}
+.radio-overlay {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+  padding: .125em;
+  top: -1px;
+  border-radius: 100%;
+  border: 1px solid #d1cfcf;
+  position: relative;
+  display: inline-block;
+  transition: box-shadow .5s;
+  vertical-align: middle;
+  list-style: none;
+}
+input[type=checkbox]:checked+.radio-overlay:before, input[type=radio]:checked+.radio-overlay:before {
+  content: " ";
+  width: 12px;
+  height: 12px;
+  display: block;
+  background-color: #9f9f9f;
+  border-radius: 100%;
+  top: 3px;
+  left: 3px;
+  position: absolute;
+}
+
+input[type=checkbox], input[type=radio] {
+    display: none;
+}
